ShoppingCartServiceTest: addSongsToCart completed